--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,19 @@ hs_err_pid*
 #html,js,css
 #*/node_modules 或者 node_modules/
 node_modules/
-dist/
+
+.DS_Store
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+/.idea
