--- a/webpackDemo/package.json
+++ b/webpackDemo/package.json
@@ -5,17 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --config ./build/prod.config.js",
+    "dev": "webpack-dev-server --open  --config ./build/dev.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^1.0.1",
     "file-loader": "^4.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.12.2",
     "less-loader": "^4.1.0",
     "style-loader": "^1.2.1",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.0.1",
-    "webpack": "^3.6.0"
+    "vue-loader": "^13.0.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^5.1.1"
+  },
+  "dependencies": {
+    "vue": "^2.6.11"
   }
 }
