--- a/mall/package.json
+++ b/mall/package.json
@@ -7,8 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "path": "^0.12.7",
+    "vue": "^2.6.11",
+    "vue-cookies": "^1.7.4",
+    "vue-route": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
