--- a/mall/package.json
+++ b/mall/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "less": "^3.12.2",
+    "less-loader": "^4.1.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
