--- a/mall/package.json
+++ b/mall/package.json
@@ -9,11 +9,16 @@
   "dependencies": {
     "axios": "^0.20.0",
     "better-scroll": "^2.0.4",
+    "compression-webpack-plugin": "^6.0.2",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
     "path": "^0.12.7",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.4",
-    "vue-route": "^1.5.1"
+    "vue-lazyload": "^1.3.3",
+    "vue-route": "^1.5.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
